Fb plugin: fix width overflow

--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,6 @@ nav{
 	background-color: #f48753;
 	color: #fff;
 	padding: 2em 0;
-	overflow-x: hidden;
-	overflow-y: visible;
-}
-.fb-like{
-	max-width: 30%;
 }
 /* END HEADER */
 
